# binding_energy_calculator

./: README.md  bindingenergy.py  pyproject.toml  test_bindingenergy.py
