[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "binding-energy-calculator"
version = "1.0.0"
description = "A calculator for the binding energy of objects."
authors = [{name = "Francis Galloway", email = "francisdavidgalloway@gmail.com"}]
readme = "README.md"
classifiers = [
    
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy>=1.2"
]
requires-python = ">= 3.10"

[tool.setuptools]
py-modules = ["bindingenergy"]